# yolo-inference-onnx

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
config/: bins_dataset_yolo.names  opencv_install_source.sh  robothon2023.names
include/: yolo_inference.hpp
src/: detect_door_knob.py  detect_probe_horizontal.py  helloworld.cpp  opencv_version.cpp  yolo_inference.cpp  yolo_inference.py  yolo_inference_atwork.cpp  yolo_inference_with_hpp.cpp  yolov5_inference.py  yolov8_inference.py  yolov8_inference_custom.py
weights/: ss22_competition_best.onnx  yolov5m.onnx
